--- a/Car-Rental.html
+++ b/Car-Rental.html
@@ -152,8 +152,8 @@
         }
 
         picture.Car-Rental-servies2 {
-            width: 95%;
-            margin-left: 0%;
+            width: 99.5%;
+            margin-left: 0.2%;
             display: block;
         }
 
@@ -272,7 +272,7 @@
 
 
         .details-Bike {
-            background: linear-gradient(43.28deg, #9da2e4 24.38%, #959edf 70.46%);
+            /* background: linear-gradient(43.28deg, #9da2e4 24.38%, #959edf 70.46%); */
             border-radius: 2.5rem;
             width: 95%;
             margin: 0;
