--- a/Rides.html
+++ b/Rides.html
@@ -236,7 +236,7 @@
         }
 
         .details {
-            background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%);
+            /* background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%); */
             border-radius: 2.5rem;
             width: 100%;
             margin: 2% 0%;
@@ -471,7 +471,7 @@
             <div class="aboutcarcarry">
 
                 <picture class="img-picture" style="border: solid 7px grey;">
-                    <img src="img/picture -ride.png" alt="picture">
+                    <img src="img/picture-ride.png" alt="picture">
                 </picture>
 
                 <picture class="img-picture2" style="border: solid 7px grey;">
@@ -497,23 +497,23 @@
 
                     <div class="features">
                         <div class="Ride-servies">
-                            <picture class="image-w-20"><img src="https://upload-cdn.careem.com/sedan_7240765cf3.png"
+                            <picture class="image-w-20"><img src="img/pageRidesimg1.png"
                                     alt="sedan_7240765cf3" class="qwer-img">
                             </picture> <span>Comfort</span>
                         </div>
                         <div class="Ride-servies">
                             <picture class=" image-w-20"><img
-                                    src="https://upload-cdn.careem.com/executive_6395d52741.png"
+                                    src="img/pageRidesimg2.png"
                                     alt="executive_6395d52741" class="qwer-img"></picture>
                             <span>Executive</span>
                         </div>
                         <div class="Ride-servies">
-                            <picture class=" image-w-20"><img src="https://upload-cdn.careem.com/max_van_f9bb9ca049.png"
+                            <picture class=" image-w-20"><img src="img/pageRidesimg3.png"
                                     alt="max_van_f9bb9ca049" class="qwer-img"></picture> <span>Max</span>
                         </div>
                         <div class="Ride-servies">
                             <picture class=" image-w-20"><img
-                                    src="https://upload-cdn.careem.com/kids_seat_2fe5015485.png"
+                                    src="img/pageRidesimg4.png"
                                     alt="kids_seat_2fe5015485" class="qwer-img"></picture>
                             <span>Kids</span>
                         </div>
@@ -560,7 +560,7 @@
                             <div class="cell-responsive">
 
                                 <div class="cellride">
-                                    <div class="img-cell spicial"><img src="img/ride-w.jpg" alt="icon"
+                                    <div class="img-cell spicial"><img src="img/pageRidesimg1.png" alt="icon"
                                             class="ride-cell  gride"></div>
                                     <div class="words-ride-cells">
                                         <div class="words-cell">
