--- a/index after login.html
+++ b/index after login.html
@@ -445,7 +445,26 @@
                 <h5 class="sayaboutus">OUR HAPPY CLIENTS</h5>
             </div>
 
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div id="clickToMovent" class="carousel  slide-fade" data-bs-touch="false" data-bs-interval="false">
+
+                <div class="carousel-indicators">
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+
+                </div>
 
                 <div class="carousel-inner">
 
@@ -611,13 +630,13 @@
                 </div>
 
                 <button class="carousel-control-prev priveat-enmatain-prev" type="button"
-                    data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                    data-bs-target="#clickToMovent" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
 
                 <button class="carousel-control-next priveat-enmatain-next" type="button"
-                    data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                    data-bs-target="#clickToMovent" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -1080,29 +1099,29 @@
     <!-- section Looking-for-ride -->
 
     <!-- section this-brand-car-web carousel-->
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div id="haverAndClick" class="carousel slide-fade" data-bs-touch="false" data-bs-interval="false">
 
         <div class="carousel-indicators">
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="3"
                 aria-label="Slide 4"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="4"
                 aria-label="Slide 5"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="5"
                 aria-label="Slide 6"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="6"
                 aria-label="Slide 7"></button>
 
         </div>
@@ -1168,13 +1187,13 @@
         </div>
 
         <button class="carousel-control-prev bg-dark text-white priveat-carousel-prev" type="button"
-            data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            data-bs-target="#haverAndClick" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
 
         <button class="carousel-control-next bg-dark text-white priveat-carousel-next" type="button"
-            data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            data-bs-target="#haverAndClick" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
