--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!-- Sunday, September 3, 2023-2:47:08 PM -->
 <!DOCTYPE html>
 <html lang="en-US" dir="rtl">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -373,7 +372,26 @@
                 <h5 class="sayaboutus">OUR HAPPY CLIENTS</h5>
             </div>
 
-            <div id="carouselExampleDark" class="carousel slider-fade" data-bs-ride="carousel">
+            <div id="clickToMovent" class="carousel  slide-fade" data-bs-touch="false" data-bs-interval="false">
+
+                <div class="carousel-indicators">
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+
+                </div>
 
                 <div class="carousel-inner">
 
@@ -403,7 +421,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person one</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -432,7 +451,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person two</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -457,7 +477,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person three</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -490,7 +511,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person four</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -523,7 +545,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person five</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -534,14 +557,14 @@
                 </div>
 
                 <button class="carousel-control-prev priveat-enmatain-prev" type="button"
-                    data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon text-light" aria-hidden="true"></span>
+                    data-bs-target="#clickToMovent" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
 
                 <button class="carousel-control-next priveat-enmatain-next" type="button"
-                    data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                    <span class="carousel-control-next-icon text-light" aria-hidden="true"></span>
+                    data-bs-target="#clickToMovent" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
 
@@ -1002,48 +1025,48 @@
     </section>
     <!-- section Looking-for-ride -->
 
-    <!-- section this-brand-car-web carousel slide-->
-    <div id="carouselExampleInterval" class="carousel slider-fade" data-bs-ride="carousel">
+    <!-- section this-brand-car-web carousel-->
+    <div id="haverAndClick" class="carousel slide-fade" data-bs-touch="false" data-bs-interval="false">
 
         <div class="carousel-indicators">
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="3"
                 aria-label="Slide 4"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="4"
                 aria-label="Slide 5"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="5"
                 aria-label="Slide 6"></button>
 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+            <button type="button" data-bs-target="#haverAndClick" data-bs-slide-to="6"
                 aria-label="Slide 7"></button>
 
         </div>
 
         <div class="carousel-inner">
             <!--  class="img-fluid clickForHover"-->
-            <div class="carousel-item active text-center" data-bs-interval="10000">
+            <div class="carousel-item active text-center" data-bs-interval="20000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeOne">El-Trip: </h1>
+                    <h1 id="typeOne">El-Trip </h1>
                     <img src="img/brand-1.jpeg" id="buttonOne" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
 
-            <div class="carousel-item text-center " data-bs-interval="2000">
+            <div class="carousel-item text-center " data-bs-interval="3000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeTow">El-Trip: </h1>
+                    <h1 id="typeTow">El-Trip </h1>
                     <img src="img/brand-2.png" id="buttonTow" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1051,7 +1074,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeThree">El-Trip: </h1>
+                    <h1 id="typeThree">El-Trip </h1>
                     <img src="img/brand-3.jpeg" id="buttonThree" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1059,7 +1082,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFour">El-Trip: </h1>
+                    <h1 id="typeFour">El-Trip </h1>
                     <img src="img/brand-5.jpeg" id="buttonFour" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1067,7 +1090,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFive">El-Trip: </h1>
+                    <h1 id="typeFive">El-Trip </h1>
                     <img src="img/brand-6.jpeg" id="buttonFive" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1075,7 +1098,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeSex">El-Trip: </h1>
+                    <h1 id="typeSex">El-Trip </h1>
                     <img src="img/brand-7.jpeg" id="buttonSex" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1083,7 +1106,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeEight">El-Trip: </h1>
+                    <h1 id="typeEight">El-Trip </h1>
                     <img src="img/brand-8.jpeg" id="buttonEight" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1091,13 +1114,13 @@
         </div>
 
         <button class="carousel-control-prev bg-dark text-white priveat-carousel-prev" type="button"
-            data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            data-bs-target="#haverAndClick" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
 
         <button class="carousel-control-next bg-dark text-white priveat-carousel-next" type="button"
-            data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            data-bs-target="#haverAndClick" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
