--- a/motor-bike.html
+++ b/motor-bike.html
@@ -219,7 +219,7 @@
             border-radius: 2.5rem;
             width: 100%;
             margin: 0;
-            padding: 1%;
+            padding: 0 1%;
         }
 
         .cell-responciv-bike {
@@ -256,7 +256,6 @@
 
         img.special-width.gridess {
             width: 70%;
-            height: 200px !important;
         }
 
         .bike-cell-bike {
@@ -284,6 +283,7 @@
         p.pcelbike {
             line-height: 25px;
             font-size: 17px;
+            font-weight: 700;
             color: black;
             margin-top: 1%;
         }
@@ -370,7 +370,7 @@
         }
 
         .details-Bike {
-            background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%);
+            /* background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%); */
             border-radius: 2.5rem;
             width: 100%;
             margin: 0%;
@@ -440,7 +440,7 @@
 
         .section-2-bike-rental {
             width: 100%;
-            margin: 3% 1.5%;
+            margin: 0;
             position: relative;
         }
 
@@ -769,8 +769,9 @@
                                     </div>
 
                                     <div class="cellbike">
-                                        <div class="img-cell-bike"><img src="img/Payment-card.png" alt="icon"
-                                                class="bike-cell  gridess">
+                                        <div class="img-cell-bike">
+                                            <i class="fa-solid fa-credit-card bike-cell  gridess" style="color: #163efb;"></i>
+                                            <!-- <img src="img/Payment-card.png" alt="icon" class=""> -->
                                         </div>
                                         <div class="words-bike-cells">
                                             <div class="wordbike-cell">
