--- a/submit-car-intro.html
+++ b/submit-car-intro.html
@@ -345,9 +345,11 @@
 
     <section class="section-image-top-position mt-3">
 
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControlsNoTouching" class="carousel slide-fade" data-bs-touch="false"
+            data-bs-interval="false">
             <div class="carousel-inner">
-                <div class="carousel-item active width-height-img-slider-top">
+
+                <div class="carousel-item active width-height-img-slider-top right">
                     <img src="img/featured-avatar.jpeg" class="img-fluid" alt="...">
 
                     <div class="Words-slider-top  carousel-caption d-none d-md-block">
@@ -357,18 +359,26 @@
                             <h1 class="h1-slider-top text-white"> Our slogan</h1>
                             <h2 class="h22-slider-top text-white-50"> el-trip</h2>
                             <h3 class="h33-slider-top text-muted"> Make</h3>
-                            <h3 class="h333-slider-top text-info"> start earning money</h3>
-                            <p class="p-slider-top text-white"> Owners earn more money by renting their car to other
-                                users. Rent your car to other people. It’s easy, safe & profitable.
+                            <h3 class="h333-slider-top " style="color: #fe8d4e !important;"> customers</h3>
+                            <p class="p-slider-top text-white"> We've been established 13 years, giving us plenty
+                                of time to perfect
+                                our service In that time we've grown from 115 sales to over 7000 with full
+                                warranty
                             </p>
-                            <button id="link-click-slider-top"> <a href="#" id="link-click-slider">submit your car</a></button>
+                            <button id="link-click-slider-top"> <a href="#" id="link-click-slider">contact
+                                    now</a></button>
 
                         </div>
 
                     </div>
 
+                    <div class="eltripLogo carousel-caption">
+                        <h1 class="h1yellowpriveat yellow">El-Trip</h1>
+                    </div>
+
                 </div>
-                <div class="carousel-item width-height-img-slider-top">
+
+                <div class="carousel-item width-height-img-slider-top right">
                     <img src="img/featured-avatar-click.jpg" class="img-fluid" alt="...">
 
                     <div class="Words-slider-top  carousel-caption d-none d-md-block">
@@ -378,9 +388,11 @@
                             <h1 class="h1-slider-top text-white"> Our slogan</h1>
                             <h2 class="h22-slider-top text-white-50"> el-trip</h2>
                             <h3 class="h33-slider-top text-muted"> Make</h3>
-                            <h3 class="h333-slider-top text-info"> customers</h3>
-                            <p class="p-slider-top text-white"> Don't just take our word for it. We're rated at 9.7/10 on
-                                independent review website TrustPilot, from over 4,000
+                            <h3 class="h333-slider-top  " style="color: #fe8d4e !important;"> customers</h3>
+                            <p class="p-slider-top text-white"> Don't just take our word for it. We're rated at 9.7/10
+                                on
+                                independent,
+                                review website TrustPilot, from over 4,000
                                 genuine customer reviews.</p>
                             <button id="link-click-slider-top"> <a href="#" id="link-click-slider">register
                                     now</a></button>
@@ -389,8 +401,13 @@
 
                     </div>
 
+                    <div class="eltripLogo carousel-caption captionresponsive1">
+                        <h1 class="h1yellowpriveat yellow-el">El-Trip</h1>
+                    </div>
+
                 </div>
-                <div class="carousel-item width-height-img-slider-top">
+
+                <div class="carousel-item width-height-img-slider-top right">
                     <img src="img/featured-avatar5.jpeg" class="img-fluid width-priveat" a lt="...">
 
                     <div class="Words-slider-top  carousel-caption d-none d-md-block">
@@ -400,7 +417,7 @@
                             <h1 class="h1-slider-top text-white"> Our slogan</h1>
                             <h2 class="h22-slider-top text-white-50"> el-trip</h2>
                             <h3 class="h33-slider-top text-muted"> Make</h3>
-                            <h3 class="h333-slider-top text-info"> customers</h3>
+                            <h3 class="h333-slider-top  " style="color: #fe8d4e !important;"> customers</h3>
                             <p class="p-slider-top text-white"> Make an Impression Cars for every budget
                                 We have a dedicated procurement team working around the clock to make sure you always
                                 get the best deals......
@@ -412,15 +429,21 @@
 
                     </div>
 
+                    <div class="eltripLogo carousel-caption captionresponsive2">
+                        <h1 class="h1yellowpriveat yellow">El-Trip</h1>
+                    </div>
+
                 </div>
+
             </div>
-            <button class="carousel-control-prev prev-slider" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
+
+            <button class="left carousel-control-prev bg-dark text-white prev-slider " type="button"
+                data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next next-slider" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
+            <button class="right carousel-control-next bg-dark text-white next-slider " type="button"
+                data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -433,7 +456,7 @@
         <div class="display">
             <div class="car1-carry">
                 <h1 class="aboutofcar">Things you’ll love about Car Carry</h1>
-                <h5 class="aboutofcar">SAY NO TO EMPTY SEATS.</h5>
+                <h5 class="aboutofcar">SAY NO TO EMPTY SEATS</h5>
             </div>
             <div class="car-carry">
                 <div class="car2-carry">
@@ -490,6 +513,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </section>
     <!-- section CarCarry /-->
 
@@ -508,7 +533,7 @@
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
                             <span class="day-car">$35/day</span>
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury"></i></div>
                         </div>
 
                         <div class="rentals-car2">
@@ -539,13 +564,13 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury"></i></div>
                             <span class="day-car">$25/day</span>
                         </div>
 
                         <div class="rentals-car2">
                             <div class="linkletest">
-                                <h4 class="link-letest"><a href="#" class="linklaster width">Citroen Grand C4
+                                <h4 class="link-letest"><a href="#" class="linklaster ">Citroen Grand C4
                                         Picasso</a></h4>
                                 <ul class="starcar">
                                     <li class="star-car"><img src="img/star-svgrepo-com.svg" alt="" class="svgcar"></li>
@@ -573,7 +598,7 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury"></i></div>
                             <span class="day-car">$35/day</span>
                         </div>
 
@@ -610,108 +635,108 @@
     <!-- section Latest-rentals /-->
 
     <!-- footer -->
-    <footer class=" footer-bootstrap-v5 mt-5">
+    <footer class=" footer-bootstrap-v5">
 
         <div class="row ms-0 me-0">
-  
+
             <div class="col-lg-4 col-md-6 col-sm-12">
-  
+
                 <div class="logo-footer mt-3 mb-3">
-  
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
-  
+
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
+
                 </div>
-  
+
                 <div class="d-flex download-fluter  mt-3 mb-3">
-  
+
                     <div class="image-link-one">
                         <img src="img/box1-download-links-AppStore.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-  
+
                     <div class="image-link-one">
                         <img src="img/box2-download-links-google-play.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-  
+
                     <div class="image-link-one">
                         <img src="img/box3-download-links-android.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-  
+
                 </div>
-  
+
             </div>
-  
+
             <div class="col-lg-4 col-md-6 col-sm-12">
-  
+
                 <div class="phone-whatsapp mt-3 mb-3">
-  
+
                     <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
                     <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
-  
+
                 </div>
-  
-  
-  
+
+
+
             </div>
-  
+
             <div class="col-lg-4 col-md-6 col-sm-12">
-  
+
                 <div class="icons-goto-pages ">
-  
+
                     <ul class="this-list-ourpages mt-3 mb-3 d-flex align-items-center justify-content-between">
-  
+
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-facebook-f" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-  
+
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-twitter" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-  
+
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-instagram" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-  
+
                     </ul>
-  
+
                 </div>
-  
-  
-  
+
+
+
             </div>
-  
-  
+
+
             <div class="row container-fluid">
-  
+
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <p class="p-footer">Terms-Policy © 2023</p>
                 </div>
-  
+
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <button id="link-click-go-to">
                         <a href="Terms-of-Service.html" class="goto-like-top">Terms of Service</a>
                     </button>
                 </div>
-  
+
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <button id="link-click-go-to">
                         <a href="Privacy-Policy.html" class="goto-like-top">Privacy Policy</a>
                     </button>
                 </div>
-  
+
             </div>
-  
-  
+
+
         </div>
-  
-      </footer>
+
+    </footer>
 
     <!-- button go to top -->
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
     <!-- button go to top /-->
-    
+
     <script src="js/java.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
