--- a/Taxi.html
+++ b/Taxi.html
@@ -235,7 +235,7 @@
         }
 
         .details-taxi {
-            background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%);
+            /* background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%); */
             border-radius: 2.5rem;
             width: 100%;
             margin: 0;
@@ -564,14 +564,14 @@
                             <div class="features-taxi">
                                 <div class="Taxi-servies">
                                     <picture class="image-qw-20"><img
-                                            src="https://upload-cdn.careem.com/sedan_7240765cf3.png"
+                                            src="img/pageRidesimg1.png"
                                             alt="sedan_7240765cf3" class="qwer-image">
                                     </picture>
                                     <span>Hala</span>
                                 </div>
                                 <div class="Taxi-servies">
                                     <picture class=" image-qw-20"><img
-                                            src="https://upload-cdn.careem.com/taxi_car_3113f165e9.png"
+                                            src="img/pageTaxiimg1.png"
                                             alt="executive_6395d52741" class="qwer-image">
                                     </picture>
                                     <span>Hala Max</span>
@@ -579,7 +579,7 @@
 
                                 <div class="Taxi-servies">
                                     <picture class=" image-qw-20"><img
-                                            src="https://upload-cdn.careem.com/kids_seat_2fe5015485.png"
+                                            src="img/pageRidesimg4.png"
                                             alt="kids_seat_2fe5015485" class="qwer-image">
                                     </picture>
                                     <span>Hala Kids</span>
@@ -663,7 +663,7 @@
 
                                 </div>
 
-                                <div class="img-taxi-rental"><img src="img/taxi-rental-hala.png" alt=""
+                                <div class="img-taxi-rental"><img src="img/taxi-rentalHala.jpg" alt=""
                                         class="image-rental">
                                 </div>
 
