--- a/Services.html
+++ b/Services.html
@@ -1478,8 +1478,8 @@
                                     <div class="words-ride-cells">
                                         <div class="words-cell">
                                             <h4 class="h4cell">Pay securely</h4>
-                                            <p class="pcell">Card, Careem Pay, Apple Pay or cash; you can pay securely
-                                                on Careem.</p>
+                                            <p class="pcell">Card, El-Trip Pay, Apple Pay or cash; you can pay securely
+                                                on El-Trip.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1656,9 +1656,9 @@
                                         <div class="words-bike-cells">
                                             <div class="wordbike-cell">
                                                 <h4 class="h4celbike">Pay securely</h4>
-                                                <p class="pcelbike">Card, Careem Pay, Apple Pay or cash; you can pay
+                                                <p class="pcelbike">Card, El-Trip Pay, Apple Pay or cash; you can pay
                                                     securely
-                                                    on Careem.</p>
+                                                    on El-Trip.</p>
                                             </div>
                                         </div>
                                     </div>
