--- a/motor-bike.html
+++ b/motor-bike.html
@@ -776,9 +776,9 @@
                                         <div class="words-bike-cells">
                                             <div class="wordbike-cell">
                                                 <h4 class="h4celbike">Pay securely</h4>
-                                                <p class="pcelbike">Card, Careem Pay, Apple Pay or cash; you can pay
+                                                <p class="pcelbike">Card, El-Trip Pay, Apple Pay or cash; you can pay
                                                     securely
-                                                    on Careem.</p>
+                                                    on El-Trip.</p>
                                             </div>
                                         </div>
                                     </div>
