--- a/index after login.html
+++ b/index after login.html
@@ -222,11 +222,11 @@
 
     <section class="section-image-top-position mt-3">
 
-        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
+        <div id="carouselExampleControlsNoTouching" class="carousel slide-fade" data-bs-touch="false"
             data-bs-interval="false">
             <div class="carousel-inner">
 
-                <div class="carousel-item active width-height-img-slider-top">
+                <div class="carousel-item active width-height-img-slider-top right">
                     <img src="img/featured-avatar.jpeg" class="img-fluid" alt="...">
 
                     <div class="Words-slider-top  carousel-caption d-none d-md-block">
@@ -236,7 +236,7 @@
                             <h1 class="h1-slider-top text-white"> Our slogan</h1>
                             <h2 class="h22-slider-top text-white-50"> el-trip</h2>
                             <h3 class="h33-slider-top text-muted"> Make</h3>
-                            <h3 class="h333-slider-top  " style="color: #fe8d4e !important;"> customers</h3>
+                            <h3 class="h333-slider-top " style="color: #fe8d4e !important;"> customers</h3>
                             <p class="p-slider-top text-white"> We've been established 13 years, giving us plenty
                                 of time to perfect
                                 our service In that time we've grown from 115 sales to over 7000 with full
@@ -249,14 +249,13 @@
 
                     </div>
 
-                    <div style="top: 60%;" class="eltripLogo carousel-caption">
-                        <h1 style="color: black; font-size: 50px; font-weight: bolder; 
-                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
+                    <div class="eltripLogo carousel-caption">
+                        <h1 class="h1yellowpriveat yellow">El-Trip</h1>
                     </div>
 
                 </div>
 
-                <div class="carousel-item width-height-img-slider-top">
+                <div class="carousel-item width-height-img-slider-top right">
                     <img src="img/featured-avatar-click.jpg" class="img-fluid" alt="...">
 
                     <div class="Words-slider-top  carousel-caption d-none d-md-block">
@@ -279,15 +278,13 @@
 
                     </div>
 
-                    <div style="width: 20%; height: 60px;
-                    top: 17%; left: 50%; background-color: rgb(0 0 0 / 13%);" class="eltripLogo carousel-caption">
-                        <h1 style="color: black; font-size: 50px; font-weight: bolder; 
-                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
+                    <div class="eltripLogo carousel-caption captionresponsive1">
+                        <h1 class="h1yellowpriveat yellow-el">El-Trip</h1>
                     </div>
 
                 </div>
 
-                <div class="carousel-item width-height-img-slider-top">
+                <div class="carousel-item width-height-img-slider-top right">
                     <img src="img/featured-avatar5.jpeg" class="img-fluid width-priveat" a lt="...">
 
                     <div class="Words-slider-top  carousel-caption d-none d-md-block">
@@ -309,20 +306,20 @@
 
                     </div>
 
-                    <div style="top: 60%; left: 35%; width: 20%; height: 60px;" class="eltripLogo carousel-caption">
-                        <h1 style="color: #919090; background-color: rgb(0 0 0 / 60%); font-size: 50px; font-weight: bolder; 
-                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
+                    <div class="eltripLogo carousel-caption captionresponsive2">
+                        <h1 class="h1yellowpriveat yellow">El-Trip</h1>
                     </div>
 
                 </div>
 
             </div>
-            <button class="carousel-control-prev bg-dark text-white prev-slider " type="button"
+
+            <button class="left carousel-control-prev bg-dark text-white prev-slider " type="button"
                 data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next bg-dark text-white next-slider " type="button"
+            <button class="right carousel-control-next bg-dark text-white next-slider " type="button"
                 data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
@@ -361,8 +358,6 @@
                 </div>
 
             </div>
-
-        </div>
 
         </div>
 
@@ -449,8 +444,8 @@
 
                 <div class="carousel-indicators">
 
-                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
 
                     <button type="button" data-bs-target="#clickToMovent" data-bs-slide-to="1"
                         aria-label="Slide 2"></button>
@@ -1097,7 +1092,7 @@
 
     </section>
     <!-- section Looking-for-ride -->
-
+    
     <!-- section this-brand-car-web carousel-->
     <div id="haverAndClick" class="carousel slide-fade" data-bs-touch="false" data-bs-interval="false">
 
@@ -1131,7 +1126,7 @@
             <div class="carousel-item active text-center" data-bs-interval="20000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeOne">Coding is </h1>
+                    <h1 id="typeOne">El-Trip </h1>
                     <img src="img/brand-1.jpeg" id="buttonOne" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1139,7 +1134,7 @@
             <div class="carousel-item text-center " data-bs-interval="3000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeTow">Coding is </h1>
+                    <h1 id="typeTow">El-Trip </h1>
                     <img src="img/brand-2.png" id="buttonTow" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1147,7 +1142,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeThree">Coding is </h1>
+                    <h1 id="typeThree">El-Trip </h1>
                     <img src="img/brand-3.jpeg" id="buttonThree" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1155,7 +1150,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFour">Coding is </h1>
+                    <h1 id="typeFour">El-Trip </h1>
                     <img src="img/brand-5.jpeg" id="buttonFour" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1163,7 +1158,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFive">Coding is </h1>
+                    <h1 id="typeFive">El-Trip </h1>
                     <img src="img/brand-6.jpeg" id="buttonFive" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1171,7 +1166,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeSex">Coding is </h1>
+                    <h1 id="typeSex">El-Trip </h1>
                     <img src="img/brand-7.jpeg" id="buttonSex" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1179,7 +1174,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeEight">Coding is </h1>
+                    <h1 id="typeEight">El-Trip </h1>
                     <img src="img/brand-8.jpeg" id="buttonEight" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
